--- a/native/src/seal/util/CMakeLists.txt
+++ b/native/src/seal/util/CMakeLists.txt
@@ -5,9 +5,9 @@ target_sources(seal
     PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/aes.cpp
         ${CMAKE_CURRENT_LIST_DIR}/baseconverter.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/blake2b.c
         ${CMAKE_CURRENT_LIST_DIR}/clipnormal.cpp
         ${CMAKE_CURRENT_LIST_DIR}/globals.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/hash.cpp
         ${CMAKE_CURRENT_LIST_DIR}/mempool.cpp
         ${CMAKE_CURRENT_LIST_DIR}/numth.cpp
         ${CMAKE_CURRENT_LIST_DIR}/polyarith.cpp
@@ -29,6 +29,8 @@ install(
     FILES
         ${CMAKE_CURRENT_LIST_DIR}/aes.h
         ${CMAKE_CURRENT_LIST_DIR}/baseconverter.h
+        ${CMAKE_CURRENT_LIST_DIR}/blake2.h
+        ${CMAKE_CURRENT_LIST_DIR}/blake2-impl.h
         ${CMAKE_CURRENT_LIST_DIR}/clang.h
         ${CMAKE_CURRENT_LIST_DIR}/clipnormal.h
         ${CMAKE_CURRENT_LIST_DIR}/common.h
