--- a/native/src/seal/util/config.h.in
+++ b/native/src/seal/util/config.h.in
@@ -9,6 +9,7 @@
 #cmakedefine SEAL_USE_STD_BYTE
 #cmakedefine SEAL_USE_SHARED_MUTEX
 #cmakedefine SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT
+#cmakedefine SEAL_USE_SYSTEM_RNG
 #cmakedefine SEAL_USE_INTRIN
 #cmakedefine SEAL_USE__UMUL128
 #cmakedefine SEAL_USE__BITSCANREVERSE64
