--- a/dotnet/native/SEALNetNative.vcxproj.filters
+++ b/dotnet/native/SEALNetNative.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="sealnet\modulus_wrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sealnet\serialization_wrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sealnet\dllmain.cpp">
@@ -182,6 +185,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="sealnet\modulus_wrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sealnet\serialization_wrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
