Fix: edited proj for VisualStudio

--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -55,6 +55,7 @@
     <ClInclude Include="seal\util\polyarithsmallmod.h" />
     <ClInclude Include="seal\util\polycore.h" />
     <ClInclude Include="seal\util\rlwe.h" />
+    <ClInclude Include="seal\util\scalingvariant.h" />
     <ClInclude Include="seal\util\smallntt.h" />
     <ClInclude Include="seal\util\uintarith.h" />
     <ClInclude Include="seal\util\uintarithmod.h" />
@@ -92,6 +93,7 @@
     <ClCompile Include="seal\util\polyarithmod.cpp" />
     <ClCompile Include="seal\util\polyarithsmallmod.cpp" />
     <ClCompile Include="seal\util\rlwe.cpp" />
+    <ClCompile Include="seal\util\scalingvariant.cpp" />
     <ClCompile Include="seal\util\smallntt.cpp" />
     <ClCompile Include="seal\util\uintarith.cpp" />
     <ClCompile Include="seal\util\uintarithmod.cpp" />
