--- a/native/src/cmake/SEALConfig.cmake.in
+++ b/native/src/cmake/SEALConfig.cmake.in
@@ -4,6 +4,7 @@
 # Exports target SEAL::seal
 #
 # Creates variables:
+#   SEAL_FOUND : If Microsoft SEAL and all required dependencies were found
 #   SEAL_BUILD_TYPE : The build configuration used
 #   SEAL_DEBUG : Set to non-zero value if library is compiled with extra debugging code (very slow!)
 #   SEAL_LIB_BUILD_TYPE : Set to either "Static", "Static_PIC", or "Shared" depending on library build type
@@ -14,33 +15,65 @@
 #   SEAL_USE_ZLIB : Set to non-zero value if library is compiled with zlib support
 #   MSGSL_INCLUDE_DIR : Holds the path to Microsoft GSL if library is compiled with Microsoft GSL support
 
+@PACKAGE_INIT@
+
 include(CMakeFindDependencyMacro)
+
+macro(warning_when_not_quiet msg)
+    if(NOT SEAL_FIND_QUIETLY)
+        message(WARNING ${msg})
+    endif()
+endmacro()
+
+macro(status_when_not_quiet msg)
+    if(NOT SEAL_FIND_QUIETLY)
+        message(STATUS ${msg})
+    endif()
+endmacro()
+
+macro(find_seal_dependency dep)
+    find_dependency(${dep})
+    if(NOT ${dep}_FOUND)
+        warning_when_not_quiet("Could not find dependency `${dep}` required by this configuration")
+        set(SEAL_FOUND FALSE)
+        return()
+    endif()
+endmacro()
+
+set(SEAL_FOUND FALSE)
 
 set(SEAL_BUILD_TYPE @CMAKE_BUILD_TYPE@)
 set(SEAL_DEBUG @SEAL_DEBUG@)
 set(SEAL_LIB_BUILD_TYPE @SEAL_LIB_BUILD_TYPE@)
 set(SEAL_USE_CXX17 @SEAL_USE_CXX17@)
 set(SEAL_ENFORCE_HE_STD_SECURITY @SEAL_ENFORCE_HE_STD_SECURITY@)
+
 set(SEAL_USE_MSGSL @SEAL_USE_MSGSL@)
 if(SEAL_USE_MSGSL)
-    set(MSGSL_INCLUDE_DIR @MSGSL_INCLUDE_DIR@)
+    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
+    find_seal_dependency(msgsl)
 endif()
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
-find_dependency(Threads REQUIRED)
+find_seal_dependency(Threads)
 
 set(SEAL_USE_ZLIB @SEAL_USE_ZLIB@)
 if(SEAL_USE_ZLIB)
-    find_dependency(ZLIB REQUIRED)
+    find_seal_dependency(ZLIB)
 endif()
 
 include(${CMAKE_CURRENT_LIST_DIR}/SEALTargets.cmake)
 
-if(NOT SEAL_FIND_QUIETLY)
-    message(STATUS "Microsoft SEAL -> Version ${SEAL_VERSION} detected")
+if(TARGET SEAL::seal)
+    status_when_not_quiet("Microsoft SEAL -> Version ${SEAL_VERSION} detected")
     if(SEAL_DEBUG)
-        message(STATUS "Performance warning: Microsoft SEAL compiled in debug mode")
+        status_when_not_quiet("Performance warning: Microsoft SEAL compiled in debug mode")
     endif()
-message(STATUS "Microsoft SEAL -> Library build type: ${SEAL_LIB_BUILD_TYPE}")
+    status_when_not_quiet("Microsoft SEAL -> Library build type: ${SEAL_LIB_BUILD_TYPE}")
+    set(SEAL_FOUND TRUE)
+else()
+    warning_when_not_quiet("Microsoft SEAL -> NOT FOUND")
+    set(SEAL_FOUND FALSE)
 endif()
+
