--- a/dotnet/nuget/SEALNet.nuspec
+++ b/dotnet/nuget/SEALNet.nuspec
@@ -6,15 +6,15 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Microsoft.Research.SEALNet</id>
-    <version>3.3.1</version>
+    <version>3.4.0</version>
     <title>Microsoft SEAL</title>
     <authors>Microsoft Research</authors>
     <owners>Microsoft Corporation</owners>
     <projectUrl>http://sealcrypto.org</projectUrl>
     <license type="file">LICENSE</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Microsoft SEAL is an easy-to-use and powerful open source homomorphic encryption library, developed by researchers in the Cryptography Research Group at Microsoft Research. Microsoft SEAL is licensed under the MIT license.</description>
-    <releaseNotes>http://sealcrypto.org/#!news</releaseNotes>
+    <description>Microsoft SEAL is an easy-to-use and powerful open source homomorphic encryption library, developed by researchers in the Cryptography and Privacy Research Group at Microsoft Research. Microsoft SEAL is licensed under the MIT license.</description>
+    <releaseNotes>https://GitHub.com/Microsoft/SEAL</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>c# crypto cryptography homomorphic encryption</tags>
   </metadata>
