--- a/native/examples/CMakeLists.txt
+++ b/native/examples/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.10)
 project(SEALExamples VERSION 3.4.0 LANGUAGES CXX)
 
 # Executable will be in ../bin
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SEALExamples_SOURCE_DIR}/../bin)
 
 add_executable(sealexamples examples.cpp)
 target_sources(sealexamples
@@ -20,7 +20,10 @@ target_sources(sealexamples
 )
 
 # Import Microsoft SEAL
-find_package(SEAL 3.4.0 EXACT REQUIRED)
+find_package(SEAL 3.4.0 EXACT REQUIRED
+    # Providing a hint so this can be built without installing Microsoft SEAL
+    HINTS ${SEALExamples_SOURCE_DIR}/../src/cmake
+)
 
 # Link Microsoft SEAL
 target_link_libraries(sealexamples SEAL::seal)
