Improved SEALNetNative CMake

--- a/native/src/CMakeLists.txt
+++ b/native/src/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required(VERSION 3.12)
 
 project(SEAL VERSION 3.4.0 LANGUAGES CXX C)
 
-if(DEFINED MSVC)
-    if(DEFINED ALLOW_COMMAND_LINE_BUILD)
+if(MSVC)
+    if(ALLOW_COMMAND_LINE_BUILD)
         message(STATUS "Configuring for Visual Studio")
     else()
         message(FATAL_ERROR "Please build Microsoft SEAL using the attached Visual Studio solution/project files")
@@ -18,8 +18,8 @@ set(SEAL_DEFAULT_BUILD_TYPE "Release")
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE ${SEAL_DEFAULT_BUILD_TYPE} CACHE
         STRING "Build type" FORCE)
-    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
-        "Release" "Debug" "MinSizeRel" "RelWithDebInfo")
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY
+        STRINGS "Release" "Debug" "MinSizeRel" "RelWithDebInfo")
 endif()
 message(STATUS "Build type (CMAKE_BUILD_TYPE): ${CMAKE_BUILD_TYPE}")
 
@@ -34,7 +34,7 @@ endif()
 include(GNUInstallDirs)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${SEAL_SOURCE_DIR}/../lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SEAL_SOURCE_DIR}/../lib)
-set(CMAKE_LIBRARY_RUNTIME_DIRECTORY ${SEAL_SOURCE_DIR}/../lib)
+set(CMAKE_LIBRARY_RUNTIME_DIRECTORY ${SEAL_SOURCE_DIR}/../bin)
 set(SEAL_TARGETS_FILENAME ${SEAL_SOURCE_DIR}/cmake/SEALTargets.cmake)
 set(SEAL_CONFIG_IN_FILENAME ${SEAL_SOURCE_DIR}/cmake/SEALConfig.cmake.in)
 set(SEAL_CONFIG_FILENAME ${SEAL_SOURCE_DIR}/cmake/SEALConfig.cmake)
@@ -102,8 +102,8 @@ set(SEAL_DEFAULT_LIB_BUILD_TYPE "Static_PIC")
 if(NOT SEAL_LIB_BUILD_TYPE)
     set(SEAL_LIB_BUILD_TYPE ${SEAL_DEFAULT_LIB_BUILD_TYPE} CACHE
         STRING "Library build type" FORCE)
-    set_property(CACHE SEAL_LIB_BUILD_TYPE PROPERTY STRINGS
-        "Static" "Static_PIC" "Shared")
+    set_property(CACHE SEAL_LIB_BUILD_TYPE PROPERTY
+        STRINGS "Static" "Static_PIC" "Shared")
 endif()
 message(STATUS "Library build type (SEAL_LIB_BUILD_TYPE): ${SEAL_LIB_BUILD_TYPE}")
 
@@ -133,7 +133,7 @@ option(SEAL_USE_ZLIB ${SEAL_USE_ZLIB_OPTION_STR} ON)
 
 # Check for intrin.h or x64intrin.h
 if(SEAL_USE_INTRIN)
-    if(DEFINED MSVC)
+    if(MSVC)
         set(SEAL_INTRIN_HEADER "intrin.h")
     else()
         set(SEAL_INTRIN_HEADER "x86intrin.h")
@@ -146,7 +146,7 @@ if(SEAL_USE_INTRIN)
 endif()
 
 # Specific intrinsics depending on SEAL_USE_INTRIN
-if(DEFINED MSVC)
+if(MSVC)
     set(SEAL_USE__UMUL128_OPTION_STR "Use _umul128")
     cmake_dependent_option(SEAL_USE__UMUL128 SEAL_USE__UMUL128_OPTION_STR ON "SEAL_USE_INTRIN" OFF)
 
@@ -172,11 +172,11 @@ cmake_dependent_option(SEAL_USE_AES_NI_PRNG SEAL_USE_AES_NI_PRNG_OPTION_STR ON "
 if(SEAL_USE_INTRIN)
     cmake_push_check_state(RESET)
     set(CMAKE_REQUIRED_QUIET TRUE)
-    if(NOT DEFINED MSVC)
+    if(NOT MSVC)
         set(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -O0 ${SEAL_LANG_FLAG}")
     endif()
 
-    if(DEFINED MSVC)
+    if(MSVC)
         # Check for presence of _umul128
         if(SEAL_USE__UMUL128)
             check_cxx_source_runs("
@@ -273,7 +273,7 @@ if(SEAL_USE_INTRIN)
 
     # Check that AES-NI runs
     if(SEAL_USE_AES_NI_PRNG)
-        if(NOT DEFINED MSVC)
+        if(NOT MSVC)
             set(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -maes")
         endif()
         check_cxx_source_runs("
