--- a/native/examples/CMakeLists.txt
+++ b/native/examples/CMakeLists.txt
@@ -21,8 +21,8 @@ target_sources(sealexamples
 
 # Import Microsoft SEAL
 find_package(SEAL 3.4.0 EXACT REQUIRED
-    # Providing a hint so this can be built without installing Microsoft SEAL
-    HINTS ${SEALExamples_SOURCE_DIR}/../src/cmake
+    # Providing a path so this can be built without installing Microsoft SEAL
+    PATHS ${SEALExamples_SOURCE_DIR}/../src/cmake
 )
 
 # Link Microsoft SEAL
