--- a/native/src/cmake/SEALConfig.cmake.in
+++ b/native/src/cmake/SEALConfig.cmake.in
@@ -51,7 +51,7 @@ set(SEAL_ENFORCE_HE_STD_SECURITY @SEAL_ENFORCE_HE_STD_SECURITY@)
 set(SEAL_USE_MSGSL @SEAL_USE_MSGSL@)
 if(SEAL_USE_MSGSL)
     list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
-    find_seal_dependency(msgsl)
+    find_seal_dependency(MSGSL)
 endif()
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
