Further work on CMake system

--- a/native/src/CMakeLists.txt
+++ b/native/src/CMakeLists.txt
@@ -41,7 +41,7 @@ set(SEAL_CONFIG_FILENAME ${SEAL_SOURCE_DIR}/cmake/SEALConfig.cmake)
 set(SEAL_CONFIG_VERSION_FILENAME ${SEAL_SOURCE_DIR}/cmake/SEALConfigVersion.cmake)
 set(SEAL_CONFIG_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/SEAL-${SEAL_VERSION_MAJOR}.${SEAL_VERSION_MINOR})
 set(SEAL_INCLUDES_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR}/SEAL-${SEAL_VERSION_MAJOR}.${SEAL_VERSION_MINOR})
-set(MSGSL_FIND_MODULE_PATH ${SEAL_SOURCE_DIR}/cmake/Findmsgsl.cmake)
+set(MSGSL_FIND_MODULE_PATH ${SEAL_SOURCE_DIR}/cmake/FindMSGSL.cmake)
 
 # For extra modules we might have
 list(APPEND CMAKE_MODULE_PATH ${SEAL_SOURCE_DIR}/cmake)
@@ -268,17 +268,13 @@ endif()
 
 # Try to find MSGSL if requested
 if(SEAL_USE_MSGSL)
-    if(MSVC)
-        # We unset the msgsl include directory to force a new find for each MSVC build.
-        # This allows developers to enable/disable msgsl support by simply adding or
-        # removing the msgsl directory from the SEAL project property pages (Include
-        # Directories).
+    if(MSGSL_ROOT)
         unset(MSGSL_INCLUDE_DIR CACHE)
     endif()
 
-    # Find msgsl and create an interface target
-    find_package(msgsl MODULE)
-    if(NOT msgsl_FOUND)
+    # Find MSGSL and create an interface target
+    find_package(MSGSL MODULE)
+    if(NOT MSGSL_FOUND)
         set(SEAL_USE_MSGSL OFF CACHE BOOL ${SEAL_USE_MSGSL_OPTION_STR} FORCE)
     endif()
 endif()
@@ -288,7 +284,7 @@ set(SEAL_USE_MSGSL_SPAN_OPTION_STR "Use gsl::span")
 cmake_dependent_option(SEAL_USE_MSGSL_SPAN ${SEAL_USE_MSGSL_SPAN_OPTION_STR} ON "SEAL_USE_MSGSL" OFF)
 if(SEAL_USE_MSGSL_SPAN)
     # Detect gsl::span
-    if(NOT HAVE_msgsl_SPAN)
+    if(NOT HAVE_MSGSL_SPAN)
         set(SEAL_USE_MSGSL_SPAN OFF CACHE BOOL ${SEAL_USE_MSGSL_SPAN_OPTION_STR} FORCE)
     endif()
 endif()
@@ -297,18 +293,14 @@ set(SEAL_USE_MSGSL_MULTISPAN_OPTION_STR "Use gsl::multi_span")
 cmake_dependent_option(SEAL_USE_MSGSL_MULTISPAN ${SEAL_USE_MSGSL_MULTISPAN_OPTION_STR} ON "SEAL_USE_MSGSL" OFF)
 if(SEAL_USE_MSGSL_MULTISPAN)
     # Detect gsl::multi_span
-    if(NOT HAVE_msgsl_MULTISPAN)
+    if(NOT HAVE_MSGSL_MULTISPAN)
         set(SEAL_USE_MSGSL_MULTISPAN OFF CACHE BOOL ${SEAL_USE_MSGSL_MULTISPAN_OPTION_STR} FORCE)
     endif()
 endif()
 
 # Try to find zlib if requested
 if(SEAL_USE_ZLIB)
-    if(MSVC)
-        # We unset the ZLIB variables to force a new find for each MSVC build.
-		# This allows developers to enable/disable ZLIB support by simply adding
-		# or removing ZLIB directories from the SEAL project property pages
-		# (Include Directories and Library Directories).
+    if(ZLIB_ROOT)
         unset(ZLIB_INCLUDE_DIR CACHE)
         unset(ZLIB_LIBRARY_DEBUG CACHE)
         unset(ZLIB_LIBRARY_RELEASE CACHE)
@@ -361,8 +353,8 @@ find_package(Threads REQUIRED)
 target_link_libraries(seal PUBLIC Threads::Threads)
 
 if(SEAL_USE_MSGSL)
-    # Link msgsl with seal
-    target_link_libraries(seal PUBLIC msgsl::msgsl)
+    # Link MSGSL with seal
+    target_link_libraries(seal PUBLIC MSGSL::MSGSL)
 endif()
 
 if(SEAL_USE_ZLIB)
