--- a/native/src/SEAL.vcxproj.filters
+++ b/native/src/SEAL.vcxproj.filters
@@ -329,7 +329,7 @@
     <None Include="seal\util\config.h.in">
       <Filter>Other\seal\util</Filter>
     </None>
-    <None Include="cmake\Findmsgsl.cmake">
+    <None Include="cmake\FindMSGSL.cmake">
       <Filter>Other\cmake</Filter>
     </None>
     <None Include="CMakeConfig.cmd">
